--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Security Tool</title>
+    <title>Password Strength Checker</title>
     <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-    <h1>Password Strength Checker</h1>
-    <input type="password" id="password" placeholder="Enter your password">
-    <button id="check">Check Password</button>
-    <p id="feedback"></p>
+</head>
+<body>
+    <div class="container">
+        <h1>Password Strength Checker</h1>
+        <input type="password" id="password" placeholder="Enter your password">
+        <button id="check">Check Password</button>
+        <div id="feedback"></div>
+    </div>
     <script src="js/main.js"></script>
-  </body>
+</body>
 </html>
+
